# paper_notifier

./: .env.example  .gitignore  README.md  keywords.txt.example  pyproject.toml  requirements.txt
src/paper_notifier/: __init__.py  cli.py  config.py  feishu.py  keywords.py  models.py  scheduler.py  summarize.py  utils.py
src/paper_notifier/sources/: arxiv.py  crossref.py  rss.py  semantic_scholar.py
